--- a/static/styles.css
+++ b/static/styles.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     height: 100vh;
     background: #f2f2f2;  /* Base white color */
-    background-image: url('/static/Comicbg.jpg');  /* Set background image */
+    background-image: url('/static/voting-security.jpg');  /* Set background image */
     background-size: cover;  /* Ensure the image covers the entire screen */
     background-position: center;  /* Center the image */
     font-family: Arial, sans-serif;
@@ -175,3 +175,33 @@ tr:nth-child(even) {
 }
 
 
+.thankyou_container {
+    background-color: rgba(255, 255, 255, 0.8); /* Light white background with transparency */
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 800px; /* Adjusted width */
+    text-align: center;
+    align-items: center;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    padding: 12px;
+    border: 1px solid #ddd;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
