--- a/templates/audience_dashboard.html
+++ b/templates/audience_dashboard.html
@@ -10,22 +10,7 @@
     <div class="audience_dashboard_container">
         <h1>Audience Dashboard</h1>
         <h3>Vote for the Ideas (Max 50 points per idea)</h3>
-         
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"></script>
-            var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port);
-        
-            function submitScores() {
-                let scores = {};
-                document.querySelectorAll("select").forEach(select => {
-                    scores[select.name] = select.value;
-                });
-        
-                socket.emit('submit_scores', scores);
-                alert("Scores submitted successfully!");
-                window.location.href = "{{ url_for('thank_you') }}";
-            }
-        </script> 
-        
+
         <form onsubmit="submitScores(); return false;">
             {% for idea in ideas %}
                 <label for="score_{{ idea.id }}">{{ idea.name }}:</label>
@@ -39,6 +24,22 @@
             <button type="submit">Submit Scores</button>
         </form>
     </div>
+
+    <!-- Socket.IO and JS should be included at the end of body -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"></script>
+    <script>
+        var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port);
+
+        function submitScores() {
+            let scores = {};
+            document.querySelectorAll("select").forEach(select => {
+                scores[select.name] = select.value;
+            });
+
+            socket.emit('submit_scores', scores);
+            alert("Scores submitted successfully!");
+            window.location.href = "{{ url_for('thank_you') }}";
+        }
+    </script>
 </body>
 </html>
-
