--- a/templates/login.html
+++ b/templates/login.html
@@ -29,9 +29,9 @@
 
             <label for="role">Role</label>
             <select name="role" id="role" required>
-                <option value="audience">Audience</option>
-                <option value="judge">Judge</option>
-                <option value="admin">Admin</option>
+                <option value="Audience">Audience</option>
+                <option value="Judge">Judge</option>
+                <option value="Admin">Admin</option>
             </select>
 
             <input type="submit" value="Send OTP">
